--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^4.0.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
